# fashion_search

./: README.md  main.py  modelcheck.py  naive_search.py
agentic_search/: .env  .gitignore  agent.py  main.py  preference.md  pyproject.toml
agentic_search/.agent_sessions/: 0242940a-ffd7-439c-ac66-ecfe3efa88ec.json  0d23a105-d760-4162-95a1-6cac609c6a71.json  0ef5e3c3-bd22-4cfa-9006-ed349e5a677d.json  1763a8c8-b2d6-4ad5-b4f0-c57f4ffd3001.json  21089140-8438-406e-b5e3-e742704ba015.json  2c83dd64-c56b-49ec-afbe-1a4e0d63033f.json  2d0880d6-ecda-49eb-9cac-87bb1f02b0e8.json  33cfc6ef-c978-4e1e-8ab5-fa2118722aff.json  41ec50d0-9d62-413d-be7e-7a183c010560.json  45546a10-a9ed-4711-a8cb-49b8285c7355.json  476f0415-6c8c-4a43-bdb6-046ac9eea7f7.json  49c826d6-38c6-443e-8348-acbfde8d702f.json  58103492-b778-4b1c-82bd-90824aa9874e.json  5a95453a-6a13-465b-9c25-71b874cbde76.json  5dc5cd74-3142-495d-975b-5b7988836146.json  62b27cdc-02db-4fd6-8be0-d52f7af2c131.json  6b195cc0-4072-4ee0-80f7-929e21b64e1a.json  84a6d4ae-ede9-4592-a515-7420ac8c83ec.json  86f836e1-9c05-4ee8-8429-eab7c72fda9f.json  9adb144d-c37f-4582-847d-c7cf3441f50e.json  abf7b6f5-185e-4340-9326-d13337d3e9b6.json  b6d219f3-e9a8-4cea-a6d3-b6fb6bc4a9b8.json  bbc7fcd1-555f-40cd-abcd-f34a066f23de.json  e2066e86-28ff-4157-8cb0-00cb935bf022.json  e688206c-88c2-48ed-a525-25812616b31b.json  ef69cb17-369e-4633-b2cc-846fa4dced8b.json  session-35g6izq7p1776075231510.json  session-6oldy7gxf1776073325389.json
agentic_search/static/: index.html  script.js
naive_search/: .gitignore  main.py  naive_search.py  pyproject.toml
(+12 files in other folders)
